--- a/config/database.yml
+++ b/config/database.yml
@@ -8,9 +8,8 @@ development:
   database: db/my_db
   username: marek
   password: user123
-  encoding: unicode
-  host: localhost
   pool: 5
+  timeout: 5000
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
@@ -20,15 +19,13 @@ test:
   database: db/my_db
   username: marek
   password: user123
-  encoding: unicode
-  host: localhost
   pool: 5
+  timeout: 5000
 
 production:
   adapter: postgresql
   database: db/my_db
   username: marek
   password: user123
-  encoding: unicode
-  host: localhost
   pool: 5
+  timeout: 5000
