--- a/package.json
+++ b/package.json
@@ -1,5 +1,8 @@
 {
   "name": "quotes",
   "private": true,
-  "dependencies": {}
+  "dependencies": {},
+  "scripts": {
+    "start": "node index.js"
+  }
 }
