remove last change from package.json

--- a/package.json
+++ b/package.json
@@ -1,8 +1,5 @@
 {
   "name": "quotes",
   "private": true,
-  "dependencies": {},
-  "scripts": {
-    "start": "node index.js"
-  }
+  "dependencies": {}
 }
